src/app/blog/[slug]/blog-post.module.scss
.blogPost {
  margin: 0 auto;
  min-height: 100vh;
  font-family: var(--font-lato);
  flex-direction: column;
  gap: 0 var(--space-6);
  padding: var(--space-1) var(--space-2);
  max-width: var(--content-lg);
  margin: 0 auto;

  @media screen and (min-width: 760px) {
    padding: var(--space-4) var(--space-8);
  }

  .postHeader {
    padding: 0;
    text-align: center;
    margin: var(--space-4) auto;

    .postTitle {
      display: block;
      margin: 0;
      padding: 0;
      font-size: var(--text-3xl);
      font-weight: var(--weight-thin);
    }

    .postDate {
      display: block;
      font-weight: var(--weight-normal);
      color: var(--text-2);
      margin: 0 auto var(--space-4);
      padding: 0;
      line-height: 1;

      time {
        font-weight: var(--weight-semibold);
      }
    }
  }

  .tags {
    display: inline-block;
    text-align: center;
    margin: 0 auto var(--space-4);
  }

  .title {
    font-weight: var(--weight-semibold);
    font-size: var(--text-2xl);
    font-family: var(--font-lato);
    padding: var(--space-1) var(--space-4);
    border-radius: var(--radius-2);
    background: var(--surface-3);
    border: 1px solid var(--border-1);
  }
}



.blogPostContent {
  h2:first-of-type {
    padding-top: 0;
    text-align: center;
  }

  ul:first-of-type {
    display: block;
    max-width: calc(0.667 * var(--content-md));
    margin: var(--space-1) auto var(--space-2);
    list-style: decimal-leading-zero;

    @media screen and (min-width: 760px) {
      margin: var(--space-4) auto var(--space-8);
    }

    li {
      margin-bottom: var(--space-2);
      margin: var(--space-1) 0;

      a {
        border-bottom: 1.5px solid var(--accent-2);
        color: inherit;
        font-weight: inherit;
        text-decoration: none;

        &:hover {
          border-bottom: 0;
        }
      }
    }
  }

  ul > ul {
    list-style: lower-alpha;
  }

  pre {
    overflow-x: scroll;
    max-width: 100%;
    display: block;

    div {
      border-radius: var(--radius-2);
    }
  }

  a,
  .link {
    color: inherit;
    font-weight: inherit;
    text-decoration: none;
    border-bottom-width: 2px;
    border-bottom-color: var(--accent-2);
    border-bottom-style: solid;
    transition: border-bottom-width 0.15s ease-in-out;

    &:hover {
      border-bottom-width: 0;
    }
  }

  h2,
  h3,
  h4,
  h5,
  h6 {
    padding: var(--space-6) 0 0;
    margin: 0;
    font-weight: var(--weight-semibold);
    // text-align: center;

    a,
    .link {
      border-bottom-width: 0;

      &:hover {
        border-bottom-width: 1px;
      }
    }
  }

  h3,
  h4,
  h5 {
    text-transform: uppercase;
    text-align: left;
    font-weight: var(--weight-regular);
  }
  img {
    margin: var(--space-4) auto var(--space-2);
    display: block;
    max-width: 80%;
  }

  img + small {
    display: block;
    text-align: center;
    font-size: var(--text-sm);
  }
}

